--- a/src/app/notes/notes-page.component.css
+++ b/src/app/notes/notes-page.component.css
@@ -6,7 +6,6 @@
 
 section {
   display: flex;
-  /* position: relative; */
   position: absolute;
   top: 0;
   right: 0;
@@ -17,24 +16,12 @@ section {
 app-notes-list {
   flex: auto;
   overflow-y: auto;
-
-  /* position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0; */
 }
 
 #app-notes-list {
   display: flex;
   flex-direction: column;
   overflow: hidden;
-
-  /* position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0; */
 }
 
 #app-editor {
@@ -60,6 +47,8 @@ app-notes-list {
   overflow: hidden;
   text-overflow: ellipsis;
   align-items: center;
+  font-size: 1.5em;
+  padding: 0.3em;
 }
 
 #bookTitle {
